# monzo-py

./: .gitignore  README.md  main.py  monzo_transactions.py  pyproject.toml  pytest.ini
demos/: PYARROW_OPTIMIZATION_SUMMARY.md  TESTING.md  analytical_demo.py  demo_duckdb_cli.py  duckdb_examples.py  examine_data_formats.py  secure_usage_example.py
integration/: __init__.py  test_live_monzo.py
src/monzo_py/: __init__.py  monzo_transactions.py
tests/: conftest.py  test_duck_db.py  test_live_data.py  test_live_data_validation.py  test_monzo_transactions.py  test_unit_mocked.py
